@@ -3,17 +3,8 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-================================
-
-I'm releasing 4.2pre1 ASAP.
-
-- finish plugin api updating guide
-- check dir chooser behavior
 - split view line insert: repainted twice, selection problems
 - bizarre dockable window manager button layout problem
-
-================================
-
 - plugin unload dependencies
 - save file --> collapse to < visibleLines -- click beyond last line
   --> exception
