@@ -18,9 +18,9 @@ Manager</b>.
 </td></tr>
 </table>
 
-<p>jEdit is free software, and you are welcome to redistribute it
-under certain conditions. See the <a href="COPYING.txt">GNU General
-Public License</a> for details.</p>
+<p>jEdit is free software, and you are welcome to redistribute and modify it
+under certain conditions. See the license section of the
+<a href="README.txt">read me file</a> for details.</p>
 
 <p>If you think you have found a bug, please consult the
 <a href="FAQ/index.html">Frequently Asked Questions</a> document first.</p>
